hopefully fixed blacklist

--- a/quarry.conf
+++ b/quarry.conf
@@ -1,8 +1,8 @@
-chest top
+chest right
 doRefuel true
 invert false
 oreQuarry true
-blacklist blacklist.txt
+blacklist ./computercraftfiles/blacklist.txt
 
 dim 30 30 30
-startDown 64
+startDown 73
