changing api path

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,3 +1,6 @@
 {
     "workspace.library": ["/home/awillingham/LLS-Addons/addons/cc-tweaked"],
+    "diagnostics.globals": [
+        "vim",
+    ],
 }
